--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,14 @@
 </head>
 <body background="assets/images/what-the-hex.png">
     <header>
-        <section id="My Name">
+        <div class="My_Name">
             My name
-        </section>
-        <section id="Links">
-            <a href="index.html">About | </a><a href="portfolio.html">Portfolio | </a><a href="contact.html">Contact</a>
-        </section>
+        </div>
+        <div class="Links">
+            <a href="index.html">About | </a><a href="portfolio.html">Portfolio | </a><a href="#">Contact</a>
+        </div>
     </header>
-    <section id="content-contact">
+    <div class="content-contact">
         <h1>Contact</h1>
         <div class="column">
         <form action="/action_page.php">
@@ -28,9 +28,10 @@
             <label for="message">Message</label><br>
             <textarea id="message" name="message" placeholder="" style="height:170px"></textarea><br>
             <input type="submit" value="Submit">
-    </section>
-    <section id="footer">
+        </div>
+    </div>
+    <div class="footer">
         Copyright &copy;
-    </section>
+    </div>
 </body>
 </html>
