--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <script src="main.js"></script>
@@ -14,45 +14,20 @@
             My name
         </section>
         <section id="Links">
-        <a href="index.html">About | </a><a href="portfolio.html">Portfolio | </a><a href="contact.html">Contact</a>
+        <a href="index.html">About | </a><a href="#">Portfolio | </a><a href="contact.html">Contact</a>
         </section>
     </header>
     <section id="portfolio">
         <h1>Portfolio</h1>
     </section>
-    <div id="projects-table">
-        <table>
-            <tr>
-                <td>
-                    <div id="top-left">Top Left Project
-                        <img src="assets/images/150.png" alt="placeholder" >
-                    </div>
-                </td>     
-                <td>
-                    <div id="top-right">Top Right Project
-                        <img src="assets/images/150.png" alt="placeholder" >
-                    </div>
-            </tr>
-            <tr>
-                <td>
-                    <div id="middle-left">Middle Left Project
-                        <img src="assets/images/150.png" alt="placeholder" >
-                    </div>
-                </td>     
-                <td>
-                    <div id="middle-right">Middle Right Project
-                        <img src="assets/images/150.png" alt="placeholder" >
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div id="bottom-left">Bottom Left Project
-                        <img src="assets/images/150.png" alt="placeholder" >
-                    </div>
-                </td>     
-            </tr>
-        </table>
+    <div id="projects">
+        <div id="top-left">
+            <img src="assets/images/tech.jpg" height="200px" width="200px">
+            <div id="project-name">
+                <p>Project 1</p>
+            </div>
+        </div>
+        
     </div>
     <section id="footer">
         Copyright &copy;
