Changes after reviewing videos

--- a/contact.html
+++ b/contact.html
@@ -8,28 +8,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <script src="main.js"></script>
 </head>
-<body background="assets/images/what-the-hex.png">
+<body>
     <header>
-        <div class="My_Name">
-            My name
-        </div>
-        <div class="Links">
-            <a href="index.html">About | </a><a href="portfolio.html">Portfolio | </a><a href="#">Contact</a>
-        </div>
+        
     </header>
-    <div class="content-contact">
-        <h1>Contact</h1>
-        <div class="column">
-        <form action="/action_page.php">
-            <label for="name">Name</label><br>
-            <input type="text" id="name" name="completename" placeholder="John Smith"><br>
-            <label for="e-mail">E-mail</label><br>
-            <input type="text" id="e-mail" name="electronicemail" placeholder="example@gmail.com"><br>
-            <label for="message">Message</label><br>
-            <textarea id="message" name="message" placeholder="" style="height:170px"></textarea><br>
-            <input type="submit" value="Submit">
-        </div>
-    </div>
+    
     <div class="footer">
         Copyright &copy;
     </div>
