--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
-    <title>Index</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
+    <script src="main.js"></script>
 </head>
-<body background="assets/images/what-the-hex.png">
-    <header>
-        <div class="My_Name">
-            Sergio Rodriguez
-        </div>
-        <div class="Links">
-            <a href="#">About | </a><a href="portfolio.html">Portfolio | </a><a href="contact.html">Contact</a>
-        </div>
+
+<body>
+    <header id="main-header">
+
     </header>
-    <div class="content">    
-        <h1>About Me</h1>
-        <div>
-            <img src="assets/images/Rodriguez_JPG.jpg" class="imagen" alt="Sergio Rodriguez" width="150px" height="160px"></div>
-        <p>Mi nombre completo es Sergio Armando Rodriguez Ramirez y nací en Monterrey el 27 de Agosto de 1979 por lo que tengo 39 años de edad. Soy egresado de la carrera de Ingeniero Industrial y de Sistemas generación 2002 por parte de la Universidad de Monterrey UDEM. También soy egresado de una Maestría en Administración generación 2011 por parte de la EGADE del ITESM en campus Monterrey.</p>
-        <p>A lo largo de mi carrera profesional me he desempeñado en diversos puestos dentro del sector manufacturero industrial. He trabajado para el sector de electrodomésticos, aeroespacial, equipo original y actualmente en construcción. Mi puesto actual es como especialista de Mejora Continua en donde puedo apoyar a todos los sitio de manufactura que forman parte del grupo de mi empleador.</p>
-    </div>
-    <div class="footer">
-        Copyright &copy;
-    </div>
+
 </body>
+
 </html>
