--- a/portfolio.html
+++ b/portfolio.html
@@ -3,34 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Portfolio</title>
+    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <script src="main.js"></script>
 </head>
-<body background="assets/images/what-the-hex.png">
-    <header>
-        <section id="My Name">
-            My name
-        </section>
-        <section id="Links">
-        <a href="index.html">About | </a><a href="#">Portfolio | </a><a href="contact.html">Contact</a>
-        </section>
-    </header>
-    <section id="portfolio">
-        <h1>Portfolio</h1>
-    </section>
-    <div id="projects">
-        <div id="top-left">
-            <img src="assets/images/tech.jpg" height="200px" width="200px">
-            <div id="project-name">
-                <p>Project 1</p>
-            </div>
-        </div>
-        
-    </div>
-    <section id="footer">
-        Copyright &copy;
-    </section>
+<body>
+    
 </body>
 </html>
