what seems like the final version

--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
         <div class="content">
             <a href="index.html" id="My-name">Sergio Rodriguez</a>
             <nav>
-                <a href="index.html">About |</a>
-                <a href="portfolio.html">Portfolio |</a>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
                 <a href="#">Contact</a>
             </nav>
         </div>
