--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="content">
             <a href="index.html" id="My-name">Sergio Rodriguez</a>
             <nav>
-                <a href="#">About |</a>
-                <a href="portfolio.html">Portfolio |</a>
+                <a href="#">About</a>
+                <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
