--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
         <div class="content">
             <a href="index.html" id="My-name">Sergio Rodriguez</a>
             <nav>
-                <a href="index.html">About |</a>
-                <a href="#">Portfolio |</a>
+                <a href="index.html">About</a>
+                <a href="#">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
